<resources>
    <string name="app_name">L04.06_Room</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear">Clear</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="send_button_description">Send</string>
    <string name="call_button_description">Call</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_email">Enter email address</string>
    <string name="hint_phone">Enter phone number</string>
    <string name="name_required">Please, enter your contact\'s name</string>
</resources>
