<!--
  ~ Copyright (c) 2018. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dsic.online.bd.MainActivity" >

    <item android:id="@+id/action_new"
        android:title="@string/action_new"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>
